Fix for LP#571200 MySQL Bug#32426: FederatedX corrupt ORDER BY with TEXT Patch taken from lp:~capttofu/maria/bug_571200 (originally for MariaDB 5.3, but adapted for 5.1)